# cloudinsight-extractor

./: README.md  pyproject.toml
cloudinsight_extractor/: __init__.py  main.py  prompts.py
