[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudinsight-extractor"
version = "2025.12.21112353"
description = "A new package designed to analyze and extract structured insights from user-submitted summaries or descriptions related to cloud infrastructure topics. Given an input text about a specific subject lik"
readme = "README.md"
authors = [{ name = "cloudinsight-extractor", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/cloudinsight-extractor"
